<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textSize="30sp"
        android:layout_gravity="top"
        android:textColor="@color/white"
        android:background="@color/purple_500"
        android:textStyle="bold"
        android:text="@string/exercise_6_app_name" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="50dp"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="238dp"
        android:padding="6dp"
        android:src="@drawable/fox" />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:textSize="22sp"
        android:textColor="@color/black"
        android:text="@string/exercise_6_sentence"
        android:textAlignment="center"
        />
    <Space
        android:layout_width="match_parent"
        android:layout_height="30dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:layout_marginEnd="30dp"
            android:textSize="20sp"
            android:text="@string/exercise_6_button_left"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="6dp"
            android:textSize="20sp"
            android:text="@string/exercise_6_button_right"/>
    </LinearLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="20dp"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="6dp"
        android:text="@string/exercise_6_sentence_counter"
        android:textAlignment="center"
        android:textColor="#474747"
        android:textSize="15sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00FFFFFF"
        android:padding="6dp"
        android:textColor="#474747"

        android:text="@string/exercise_6_button_back" />

</LinearLayout>